5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1635_1053.log
== TEST (2019-04-07 22:23:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = (" Digite o nome ")
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <nome> nao eh patrono do harry potter"
	
print(mensagem)

-- OUTPUT:
<nome> nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:23:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = (" Digite o nome ")
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"

	
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:23:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = (" Digite o nome ")
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:24:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"

	

-- OUTPUT:
Digite o nome
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:24:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <nome> nao eh patrono do harry potter"
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <nome> nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:25:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome = " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <nome> nao eh patrono do harry potter"
	
print(mensagem)

	

-- ERROR:
File "XXXX", line 5
    if(nome = " cervo "):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:25:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <nome> nao eh patrono do harry potter"
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <nome> nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:26:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"

	
	
print(mensagem)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:29:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <nome> nao eh patrono do harry potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <nome> nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:29:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <nome> nao eh patrono do harry potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <nome> nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:29:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <nome> nao eh patrono do harry potter"
	
	
print(mensagem)

	

-- EXECUTION TIME:
0.121489
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
Digite o nome  <nome> nao eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
Digite o nome  <nome> nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:29:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <nome> nao eh patrono do harry potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <nome> nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:30:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " "nome"nao eh patrono do harry potter"
	
	
print(mensagem)

	

-- ERROR:
File "XXXX", line 8
    mensagem = " "nome"nao eh patrono do harry potter"
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:31:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <i> nome </i> nao eh patrono do harry potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <i> nome </i> nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:32:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " < nome > nao eh patrono do harry potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  < nome > nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:32:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " < nome > nao eh patrono do harry potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  < nome > nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:32:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " < nome > nao eh patrono do harry potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  < nome > nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:33:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " <cervo> eh patrono do harry potter"
else:
	mensagem = " < nome > nao eh patrono do harry potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  < nome > nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:33:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if(nome == " cervo "):
	mensagem = " <cervo> eh patrono do harry potter"
else:
	mensagem = " < nome > nao eh patrono do harry potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  < nome > nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:34:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if(entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <entrada> nao eh patrono do Harry Potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <entrada> nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:34:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if(entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <entrada> nao eh patrono do Harry Potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <entrada> nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:42:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if(entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <entrada> nao eh patrono do Harry Potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <entrada> nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:42:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if(entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <entrada> nao eh patrono do Harry Potter"
	
	
print(mensagem)

	

-- EXECUTION TIME:
0.103482
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
Digite o nome  <entrada> nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
Digite o nome  <entrada> nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:42:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if(entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <entrada> nao eh patrono do Harry Potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <entrada> nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:43:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if(entrada = " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <entrada> nao eh patrono do Harry Potter"
	
	
print(mensagem)

	

-- ERROR:
File "XXXX", line 5
    if(entrada = " cervo "):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:43:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if(entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <entrada> nao eh patrono do Harry Potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <entrada> nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:44:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if(entrada == " cervo "):
	msg = " cervo eh patrono do harry potter"
else:
	mensagem = " <entrada> nao eh patrono do Harry Potter"
	
	
print(msg)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:44:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if(entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <entrada> nao eh patrono do Harry Potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <entrada> nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:45:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if (entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " "entrada" nao eh patrono do Harry Potter"
	
	
print(mensagem)

	

-- ERROR:
File "XXXX", line 8
    mensagem = " "entrada" nao eh patrono do Harry Potter"
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:45:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if (entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <entrada> nao eh patrono do Harry Potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <entrada> nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:46:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if (entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " <entrada> nao eh patrono do Harry Potter"
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  <entrada> nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:48:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if (entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " entrada " + nao eh patrono do Harry Potter
	
	
print(mensagem)

	

-- ERROR:
File "XXXX", line 8
    mensagem = " entrada " + nao eh patrono do Harry Potter
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:48:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if (entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " entrada " nao eh patrono do Harry Potter
	
	
print(mensagem)

	

-- ERROR:
File "XXXX", line 8
    mensagem = " entrada " nao eh patrono do Harry Potter
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:49:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if (entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"
else:
	mensagem = " entrada " 
	
	
print(mensagem)

	

-- OUTPUT:
Digite o nome  entrada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:49:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if (entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"

	
print(mensagem)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:51:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if (entrada == " cervo "):
	mensagem = " cervo eh patrono do harry potter"

	
print(mensagem)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:52:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if (entrada == " cervo "):
	msg = " cervo eh patrono do harry potter"

	
print(msg)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:52:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if (entrada == " cervo "):
	msg = " cervo eh patrono do harry potter"

	
print(msg)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:53:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if (entrada == " cervo "):
	msg = " cervo eh patrono do harry potter"
else:
	msg = "entrada"
print(entrada)

	


	

-- OUTPUT:
Digite o nome cervo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:54:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
entrada = input((" Digite o nome "))
if (entrada == " cervo "):
	msg = " cervo eh patrono do harry potter"
else:
	msg = "entrada"
print(msg)

	


	

-- OUTPUT:
Digite o nome entrada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:55:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if (nome = " cervo "):
	msg = " cervo eh patrono do harry potter"
else:
	msg = "entrada"
print(msg)

	


	

-- ERROR:
File "XXXX", line 5
    if (nome = " cervo "):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:55:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if (nome == " cervo "):
	msg = " cervo eh patrono do harry potter"
else:
	msg = "entrada"
print(msg)

	


	

-- OUTPUT:
Digite o nome entrada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:58:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if (nome == " cervo "):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = " <nome> nao eh patrono do Harry Potter "
print(msg)

	


	

-- OUTPUT:
Digite o nome  <nome> nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:08:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if (nome == cervo ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = " <nome> nao eh patrono do Harry Potter "
print(msg)

	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome == cervo ):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:09:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if (nome = cervo ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = " <nome> nao eh patrono do Harry Potter "
print(msg)

	


	

-- ERROR:
File "XXXX", line 5
    if (nome = cervo ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:09:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if (nome == cervo ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = " <nome> nao eh patrono do Harry Potter "
print(msg)

	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome == cervo ):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:13:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " eh patrono do Harry Potter "
print(msg)
 
	


	

-- OUTPUT:
Digite o nome cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:13:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- OUTPUT:
Digite o nome cervo nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:13:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- OUTPUT:
Digite o nome cervo nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:13:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- OUTPUT:
Digite o nome cervo nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:14:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input((" Digite o nome "))
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.191449
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
Digite o nome cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
Digite o nome bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:14:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.132834
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:14:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.155152
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:15:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.138624
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:15:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.102907
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:15:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.100869
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/1053/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:15:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.158589
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:15:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.22097
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:15:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.194168
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:15:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.232991
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:15:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.333535
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/1053/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:15:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome = " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.195684
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 5
    if (nome = " cervo " ):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:15:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome = " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- ERROR:
File "XXXX", line 5
    if (nome = " cervo " ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:15:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- OUTPUT:
cervo nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:16:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.138685
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:16:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.171023
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:16:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.157857
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:17:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter"
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.217304
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:18:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter "
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.179466
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:45:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter "
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- OUTPUT:
cervo nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:45:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo " ):
	msg = " cervo eh patrono do Harry Potter "
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- OUTPUT:
cervo nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:45:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == cervo  ):
	msg = " cervo eh patrono do Harry Potter "
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome == cervo  ):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:45:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo "  ):
	msg = " cervo eh patrono do Harry Potter "
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- OUTPUT:
cervo nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:46:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == " cervo "  ):
	msg = " cervo eh patrono do Harry Potter "
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- OUTPUT:
cervo nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:47:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input(" Digite o nome ")
if (nome == "cervo"  ):
	msg = " cervo eh patrono do Harry Potter "
else:
	msg = nome + " nao eh patrono do Harry Potter "
print(msg)
 
	


	

-- EXECUTION TIME:
0.203733
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
